#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(rtmfprobe, 1.0a)

AC_CONFIG_SRCDIR([src/main.c])
AC_CONFIG_MACRO_DIR(macros)

AM_INIT_AUTOMAKE(foreign -Wall -Werror)

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

# Checks for libraries.
AM_PROG_LIBTOOL
AX_CHECK_OPENSSL

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
